# feoxdb

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md
.github/workflows/: benchmark.yml  ci.yml  pages.yml  publish.yml  release.yml
benches/: latency.rs  throughput.rs
examples/: basic_usage.rs  cas_example.rs  deterministic_test.rs  performance_test.rs  persistence_test.rs
src/: constants.rs  error.rs  lib.rs  stats.rs
src/core/: cache.rs  mod.rs  record.rs  store.rs  ttl_sweep.rs
src/core/store/: atomic.rs  builder.rs  init.rs  internal.rs  json_patch.rs  mod.rs  operations.rs  persistence.rs  range.rs  recovery.rs  ttl.rs
src/storage/: format.rs  free_space.rs  io.rs  metadata.rs  mod.rs  write_buffer.rs
src/tests/: allocator_tests.rs  cache_tests.rs  free_space_tests.rs  hash_tests.rs  io_tests.rs  json_patch_tests.rs  metadata_tests.rs  mod.rs  persistence_tests.rs  record_tests.rs  stats_tests.rs  store_tests.rs  ttl_tests.rs  write_buffer_tests.rs
src/tests/store/: atomic_tests.rs  builder_tests.rs  concurrency_tests.rs  edge_cases_tests.rs  json_patch_tests.rs  memory_tests.rs  mod.rs  operations_tests.rs  range_tests.rs  timestamp_tests.rs
src/utils/: allocator.rs  hash.rs  json_patch.rs  mod.rs
