[package]
name = "feoxdb"
version = "0.2.0"
edition = "2021"
authors = ["Mehran Toosi <dev@mehran.dk>"]
description = "Iron-oxide fast embedded database - nanosecond-level key-value storage"
documentation = "https://docs.rs/feoxdb"
homepage = "https://feoxdb.com"
repository = "https://github.com/mehrantsi/feoxdb"
readme = "README.md"
keywords = ["database", "key-value", "embedded", "storage", "performance"]
categories = ["database", "data-structures", "filesystem", "caching"]
license = "Apache-2.0"

[dependencies]
# Synchronization
once_cell = "1.19"

# Lock-free data structures and synchronization
crossbeam-epoch = "0.9"
crossbeam-utils = "0.8"
crossbeam-channel = "0.5"
crossbeam-skiplist = "0.1.3"
parking_lot = { version = "0.12", features = ["arc_lock"] }
dashmap = "6.1"

# Memory management
bytes = "1.5"

# Serialization
serde_json = "1.0"

# Data structures
intrusive-collections = "0.9"

# Error handling
thiserror = "2.0"

# JSON patching
json-patch = "4.0"

# System
num_cpus = "1.16"

# Random number generation
rand = "0.9"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix = { version = "0.30", features = ["fs", "mman"] }

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.7"

[dev-dependencies]
tempfile = "3.8"
criterion = "0.7"
clap = { version = "4.4", features = ["derive"] }

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
debug = false
strip = true

[profile.bench]
inherits = "release"

[features]
default = []
io_uring = []
persistent = []

[[example]]
name = "basic_usage"

[[example]]
name = "performance_test"

[[example]]
name = "deterministic_test"


[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "latency"
harness = false

[lib]
name = "feoxdb"
path = "src/lib.rs"